[package]
categories = ["filesystem", "os::linux-apis"]
description = "Check installed distro files for changes (types library)"
edition = "2021"
keywords = ["package-management"]
license = "MPL-2.0"
name = "paketkoll_types"
repository = "https://github.com/VorpalBlade/paketkoll"
rust-version = "1.80.0"
version = "0.1.2"

[features]
# Include support for serde on public datatypes
serde = [
    "dep:serde",
    "dep:serde_bytes",
    "smallvec/serde",
    "bitflags/serde",
    "compact_str/serde",
]

[dependencies]
ahash.workspace = true
anyhow.workspace = true
bitflags.workspace = true
compact_str.workspace = true
dashmap.workspace = true
derive_builder.workspace = true
faster-hex = { workspace = true, features = ["std"] }
lasso = { workspace = true, features = [
    "ahasher",
    "inline-more",
    "multi-threaded",
] }
nix = { workspace = true, features = ["fs", "user"] }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_bytes = { workspace = true, optional = true }
smallvec.workspace = true
strum.workspace = true
thiserror.workspace = true

[lints]
workspace = true
