[package]
categories = ["filesystem", "os::linux-apis"]
description = "Check installed distro files for changes (types library)"
edition = "2021"
keywords = ["package-management"]
license = "MPL-2.0"
name = "paketkoll_types"
repository = "https://github.com/VorpalBlade/paketkoll"
rust-version = "1.80.0"
version = "0.1.4"

[dependencies]
ahash.workspace = true
bitflags.workspace = true
compact_str.workspace = true
dashmap.workspace = true
derive_builder.workspace = true
eyre.workspace = true
faster-hex.workspace = true
lasso.workspace = true
nix = { workspace = true, features = ["fs", "user"] }
serde.workspace = true
serde_bytes.workspace = true
smallvec.workspace = true
strum.workspace = true
thiserror.workspace = true

[lints]
workspace = true
