[package]
description = "Shared utilities for Paketkoll and Konfigkoll (not for direct public use)"
edition = "2021"
license = "MPL-2.0"
name = "paketkoll_utils"
repository = "https://github.com/VorpalBlade/paketkoll"
rust-version = "1.80.0"
version = "0.1.6"

[dependencies]
eyre.workspace = true
paketkoll_types = { version = "0.2.1", path = "../paketkoll_types" }
ring.workspace = true

[lints]
workspace = true
