[package]
description = "Shared utilities for Paketkoll and Konfigkoll (not for direct public use)"
edition = "2021"
keywords = ["package-management"]
license = "MPL-2.0"
name = "paketkoll_utils"
repository = "https://github.com/VorpalBlade/paketkoll"
rust-version = "1.81.0"
version = "0.1.7"

[dependencies]
eyre.workspace = true
paketkoll_types = { version = "0.2.2", path = "../paketkoll_types" }
paketkoll_workspace_hack = { version = "0.1", path = "../paketkoll_workspace_hack" }
ring.workspace = true

[lints]
workspace = true
