[package]
categories = ["os::linux-apis"]
description = "A parser for systemd-tmpfiles configuration files"
edition = "2021"
keywords = ["systemd", "tmpfiles", "parser"]
license = "MPL-2.0"
name = "systemd_tmpfiles"
repository = "https://github.com/VorpalBlade/paketkoll"
rust-version = "1.79.0"
version = "0.1.1"

    [package.metadata.docs.rs]
    default-target = "x86_64-unknown-linux-gnu"
    features = ["user"]
    # Other targets make no difference, and we only support Linux
    targets = []

[features]
default = ["user"]
# Enable support for resolving specifiers in an user context
user = ["dep:dirs", "nix/user"]

[dependencies]
base64-simd.workspace = true
bitflags.workspace = true
compact_str = { workspace = true, features = ["smallvec"] }
dirs = { workspace = true, optional = true }
libc.workspace = true
memchr.workspace = true
nix = { workspace = true, features = ["feature"] }
smallvec = { workspace = true, features = [
    "const_generics",
    "const_new",
    "union",
] }
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
winnow = { workspace = true, features = ["simd"] }

[dev-dependencies]
indoc.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
