[package]
categories = ["os::linux-apis"]
description = "A parser for systemd-tmpfiles configuration files"
edition = "2024"
keywords = ["parser", "systemd", "tmpfiles"]
license = "MPL-2.0"
name = "systemd_tmpfiles"
repository = "https://github.com/VorpalBlade/paketkoll"
rust-version = "1.85.0"
version = "0.2.2"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
features = ["user"]
# Other targets make no difference, and we only support Linux
targets = []

[features]
default = ["user"]
# Enable support for resolving specifiers in a user context
user = ["dep:dirs", "nix/user"]

[dependencies]
base64-simd.workspace = true
bitflags.workspace = true
compact_str = { workspace = true, features = ["smallvec"] }
dirs = { workspace = true, optional = true }
libc.workspace = true
memchr.workspace = true
nix = { workspace = true, features = ["feature"] }
paketkoll_workspace_hack = { version = "0.1", path = "../paketkoll_workspace_hack" }
smallvec.workspace = true
strum.workspace = true
thiserror.workspace = true
winnow.workspace = true

[dev-dependencies]
indoc.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
