[package]
description = "Cargo-xtask pattern. Do not upload to crates.io"
edition = "2024"
license = "MPL-2.0"
name = "xtask"
publish = false
repository = "https://github.com/VorpalBlade/paketkoll"
rust-version = "1.88.0"
version = "0.1.0"

[features]
# Default features
default = ["arch_linux", "debian", "json"]

# Include the Arch Linux backend
arch_linux = ["paketkoll/arch_linux"]

# Include support for the Debian backend
debian = ["paketkoll/debian"]

# Include support for JSON output
json = ["paketkoll/json"]

# Include support for the systemd-tmpfiles backend (EXPERIMENTAL)
systemd_tmpfiles = ["paketkoll/systemd_tmpfiles"]

[dependencies]
camino.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
color-eyre.workspace = true
eyre.workspace = true
konfigkoll = { version = "0.1.16", path = "../konfigkoll" }
paketkoll = { version = "0.3.14", path = "../paketkoll" }
paketkoll_workspace_hack = { version = "0.1", path = "../paketkoll_workspace_hack" }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
